--- a/about us.html
+++ b/about us.html
@@ -4,56 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <style>
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        #texto {
-            min-height: 150px;
-        }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
-        .miembros {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-        .miembro {
-            text-align: center;
-            margin: 10px;
-            flex: 1 1 300px;
-        }
-        .miembro img {
-            width: 100%;
-            max-width: 200px;
-            height: auto;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-        .cambiar {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-        }
-        @media (max-width: 600px) {
-            .miembros {
-                flex-direction: column;
-                align-items: center;
-            }
-            .miembro {
-                margin: 20px 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/Ojevazt/css/about us.css">
 </head>
 <body>
     <div class="container">
@@ -64,16 +15,16 @@
         
         <div class="miembros">
             <div class="miembro">
-                <img src="ruta-imagen-miembro1.jpg" alt="Miembro 1">
+                <img src="Imágenes/Lautaro.jpg">
                 <h2>Lautaro Vaz Tourem</h2>
                 <a href="https://www.linkedin.com/in/miembro1" target="_blank">
                     <button>LinkedIn</button>
                 </a>
             </div>
             <div class="miembro">
-                <img src="ruta-imagen-miembro2.jpg" alt="Miembro 2">
+                <img src="Imágenes/Benjamín.jpg">
                 <h2>Benjamín Ojeda</h2>
-                <a href="https://www.linkedin.com/in/miembro2" target="_blank">
+                <a href="https://www.linkedin.com" target="_blank">
                     <button>LinkedIn</button>
                 </a>
             </div>
@@ -90,7 +41,7 @@
             const descripcion = document.getElementById('descripcion');
             if (titulo.innerHTML.includes('Sobre Nosotros')) {
                 titulo.innerHTML = 'About Us';
-                descripcion.innerHTML = 'OjeVvazt is a leading company in custom software development. Our team specializes in the creation of innovative technological solutions that adapt to the specific needs of our clients through the development of web programs. In our company we transform challenges into efficient solutions, driving the success of our clients through technology.';
+                descripcion.innerHTML = 'OjeVazt is a leading company in custom software development. Our team specializes in the creation of innovative technological solutions that adapt to the specific needs of our clients through the development of web programs. In our company we transform challenges into efficient solutions, driving the success of our clients through technology.';
             } else {
                 titulo.innerHTML = 'Sobre Nosotros';
                 descripcion.innerHTML = 'OjeVazt es una empresa líder en el desarrollo de software a medida. En nuestro equipo nos especializamos en crear soluciones tecnológicas innovadoras que se adaptan a las necesidades específicas de nuestros clientes a través del desarrollo de programas web. En nuestra empresa transformamos desafios en soluciones eficientes, impulsando el éxito de nuestros clientes a través de la tecnología.';
